moz style added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -757,6 +757,10 @@ $fnColor: #3b3b3b;
     width: 70%;
   }
 
+  .block__program .block__item__title {
+    font-size: 20px;
+  }
+
   .block__3d-content .block__item__text,
   .block__advantages .block__item__text {
     font-size: 20px;
